--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,8 +2,8 @@ sonar.projectVersion=1.0
 # sonar.sourceEncoding=UTF-8
 sonar.sources=src
 sonar.language=ts
-sonar.host.url=https://c29f-154-144-237-193.ngrok-free.app
-sonar.login=sqa_1868c1341b4f3e169077c609a98f0637f11ee3b3
+sonar.host.url=http://localhost:9001
+sonar.login=sqp_2aa162af4bc52da9ed1c5d2bfe0770e3c1ba51f7
 sonar.exclusions=**/node_modules/**
 # sonar.tests=src 
 # sonar.test.inclusions=**/*.spec.ts
